Tue Mar 20 20:15:06 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* rtl.texi (COMPARE): Clarify documentation and reference section
	on comparisons.

2001-03-20  Stan Shebs  <shebs@apple.com>

	* objc/objc-act.c (get_static_reference): Use NULL_TREE.
	(get_object_reference): Ditto.
	(error_with_ivar): Use error_with_file_and_line.
	(warn_with_method): Use warning_with_file_and_line.

2001-03-20  Tom Tromey  <tromey@redhat.com>

	* libgcc-std.ver: Added __fixunssfsi and __fixunsdfsi.

2001-03-20  Mark Mitchell  <mark@codesourcery.com>

	* tree.c (set_decl_assembler_name): Set DECL_ASSEMBLER_NAME for
	variables that are TREE_PUBLIC, even if not TREE_STATIC.

2001-03-20  DJ Delorie  <dj@redhat.com>

	* Makefile.in (install-libgcc): Pass complete list of variables.
	(install-multilib): Ditto.

2001-03-20  David Billinghurst  <David.Billinghurst@riotinto.com>

	* config/i386/cygwin.h: Declare ctor_section, dtor_section
	drectve_section, switch_to_section.

	* winnt.c: Declare functions associated_type, gen_stdcall_suffix,
	i386_pe_dllexport_p, i386_pe_dllimport_p, i386_pe_mark_dllexport,
	i386_pe_mark_dllimport.

2001-03-20  David Billinghurst <David.Billinghurst@riotinto.com>
  
	* config/i386/cygwin.h: Include <stdio.h> Declare and constify
	functions i386_pe_*.

	* config/i386/winnt.c: Include "tm_p.h" and "toplev.h" Constify
	i386_pe_* functions with char * arguments.

2001-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.md (movsf_ie): Fix output patterns for fpul load
	and store.
	(movsi_ie): Introduce fpul store.

2001-03-20  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.in (OBJS): Remove hashtab.o.

2001-03-19  Stan Shebs  <shebs@apple.com>

	* objc/objc-act.c (maybe_objc_method_name): Remove, never called.
	* c-lang.c (maybe_objc_method_name): Ditto.
	* c-tree.h (maybe_objc_method_name): Remove decl.

2001-03-19  Tom Tromey  <tromey@redhat.com>

	* gcc.c (init_gcc_specs): Fix comment.

2001-03-19  Mark Mitchell  <mark@codesourcery.com>
