@@ -1745,16 +1745,6 @@
   [(set_attr "type" "push")
    (set_attr "mode" "HI")])
 
-(define_insn "*pophi1"
-  [(set (match_operand:HI 0 "nonimmediate_operand" "=r*m")
-	(mem:HI (reg:SI 7)))
-   (set (reg:SI 7)
-	(plus:SI (reg:SI 7) (const_int 2)))]
-  "!TARGET_64BIT"
-  "pop{w}\\t%0"
-  [(set_attr "type" "pop")
-   (set_attr "mode" "HI")])
-
 (define_insn "*movhi_1"
   [(set (match_operand:HI 0 "nonimmediate_operand" "=*a,r,r,*a,r,m")
 	(match_operand:HI 1 "general_operand" "i,r,rn,rm,rm,rn"))]
@@ -1867,30 +1857,6 @@
 	(match_operand:QI 1 "general_operand" ""))]
   ""
   "ix86_expand_move (QImode, operands); DONE;")
-
-;; emit_push_insn when it calls move_by_pieces requires an insn to
-;; "push a byte".  But actually we use pushw, which has the effect
-;; of rounding the amount pushed up to a halfword.
-
-(define_insn "*pushqi2"
-  [(set (match_operand:QI 0 "push_operand" "=<,<")
-	(match_operand:QI 1 "nonmemory_no_elim_operand" "n,r"))]
-  "!TARGET_64BIT"
-  "@
-   push{w}\\t{|word ptr }%1
-   push{w}\\t%w1"
-  [(set_attr "type" "push")
-   (set_attr "mode" "HI")])
-
-(define_insn "*popqi1"
-  [(set (match_operand:QI 0 "nonimmediate_operand" "=r*m")
-	(mem:QI (reg:SI 7)))
-   (set (reg:SI 7)
-	(plus:SI (reg:SI 7) (const_int 2)))]
-  "!TARGET_64BIT"
-  "pop{w}\\t%0"
-  [(set_attr "type" "pop")
-   (set_attr "mode" "HI")])
 
 ;; Situation is quite tricky about when to choose full sized (SImode) move
 ;; over QImode moves.  For Q_REG -> Q_REG move we use full size only for
